[tool.poetry]
name = "htmlformater"
version = "0.1.0"
description = ""
authors = ["Juzo(-.-) <alexs22221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
python-multipart = "^0.0.17"
aiofiles = "^24.1.0"
mypy = "^1.13.0"
pdfplumber = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
